src/components/main/Main.css
.main {
    position: absolute;
    /* top: 100px; */
    left: 0;
    width: 100%;
    text-align: center;
    background-color: rgb(4, 180, 180);;
    color: white;
  }


  .ImageClass {
    display: none;
    position: relative;
    display: inline-block;
    max-width: 480px;
    margin: auto;
    width: 400px;
    min-width: 320px;
  text-align: center;
  color: white;

  }

  
  .centered {
    position: absolute;
    top: 20%;
    left: 48%;
    transform: translate(-50%, -50%);
  }

